samples/_failures_safe/1761462885_425c25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4edffc6.c: In function ‘main’:
./samples/SAFE/__tmp_f4edffc6.c:173:5: error: expected expression at end of input
  173 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_f4edffc6.c:173:5: error: expected declaration or statement at end of input
